Bugfix: Flexbox causes too much gap between #primary, #secondary (#14)

--- a/assets/src/scss/site/components/_slideout.scss
+++ b/assets/src/scss/site/components/_slideout.scss
@@ -32,15 +32,16 @@
     position: relative;
     top: $navbar--height;
     left: 0;
-    padding: 15vh #{$content--min-padding} 0;
+    padding: 0 #{$content--min-padding};
     overflow: auto;
 }
 
 #slideout-content {
     display: flex;
     justify-content: space-evenly;
+    align-content: flex-start;
     flex-wrap: wrap;
-    row-gap: 4rem;
+    row-gap: 0;
     max-height: calc(100% - #{$navbar--height});
     min-width: 45%;
     padding: 0;
@@ -113,9 +114,17 @@
 }
 
 #primary {
+    padding-top: 10vh;
+    padding-bottom: 2rem;
+
     li {
         font-size: clamp(1.75rem, 4vw, 2.5rem);
     }
+}
+
+#secondary {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
 
@@ -129,29 +138,5 @@ body.slideout-visible {
     #primary,
     #secondary {
         display: unset;
-    }
-}
-
-
-/** Change the behaviour of the buttons inside #navbar: Let them act like normal links. */
-
-body:not(.slideout-visible).slide-in-progress .wp-block-button.is-style-flat > .wp-block-button__link,
-body.slideout-visible .wp-block-button.is-style-flat > .wp-block-button__link {
-    .svg-symbol {
-        background-color: $color--slideout--text;
-    }
-
-    &:hover,
-    &:focus {
-        background-color: transparent;
-        box-shadow: none;
-
-        .svg-symbol {
-            background-color: $color--slideout--text__hover;
-        }
-    }
-
-    &:active {
-        top: 0;
     }
 }
